--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
   margin: 5px;
   margin-top: 50px;
-  color: hotpink;
+  color: violet;
 }
 p {
   margin: 5px;
@@ -35,8 +35,8 @@ p {
 }
 #enter {
   padding: 2%;
-  background-color: #ff9100;
-  color: white;
+  background-color: #a8c3bc;
+  color: rgb(69, 15, 15);
   border-radius: 3px;
   width: 10%;
   border: none;
